fix(sbb-sidebar): fix sidebar inline-padding on iOS browsers

--- a/src/elements/sidebar/sidebar/sidebar.scss
+++ b/src/elements/sidebar/sidebar/sidebar.scss
@@ -25,10 +25,14 @@
   --sbb-sidebar__border-radius-end: 0;
   --sbb-sidebar__close-button-size: var(--sbb-size-element-xs);
 
-  @supports (scrollbar-gutter: stable) {
-    --sbb-sidebar__padding-inline-end: calc(
-      var(--sbb-sidebar-padding) - var(--sbb-sidebar-scrollbar-placeholder-width)
-    );
+  // Exclude iOS browsers because they use overlay scrollbars
+  @supports not (-webkit-touch-callout: none) {
+    // Subtract the width of the scrollbar from the padding
+    @supports (scrollbar-gutter: stable) {
+      --sbb-sidebar__padding-inline-end: calc(
+        var(--sbb-sidebar-padding) - var(--sbb-sidebar-scrollbar-placeholder-width)
+      );
+    }
   }
 }
 
